# A-EYE

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
app/: README.MD  package.json  server.js
app/client/: index.html  style.css
app/routes/: routes.js
app/www/: 404.html  index.html  script.js
data/: index.html
main/: CMakeLists.txt  ai_processor.c  app_httpd.c  app_httpd.h  app_main.c  camera_init.c  camera_init.h  camera_manager.c  display_manager.c  face_logic.c  face_logic.h  idf_component.yml  recognition_status.c  recognition_status.h  server_comm.c  web_server.c  web_server.h  wifi_manager.c
main/cert/: server_cert.pem
main/include/: ai_processor.h  camera_manager.h  config.h  display_manager.h  font5x7.h  server_comm.h  wifi_manager.h
main/www/: style.css
